# amplifier-module-provider-github-copilot

./: .gitignore  MIGRATION.md  Makefile  README.md  pyproject.toml
amplifier_module_provider_github_copilot/: __init__.py  _constants.py  _deprecated.py  _permissions.py  _platform.py  client.py  completion.py  converters.py  error_translation.py  event_router.py  exceptions.py  fake_tool_detection.py  model_cache.py  models.py  observability.py  provider.py  streaming.py  tool_capture.py
amplifier_module_provider_github_copilot/config/: events.yaml
amplifier_module_provider_github_copilot/sdk_adapter/: _imports.py  client.py  event_helpers.py  types.py
contracts/: deny-destroy.md
scripts/: smoke_test.py
tests/: conftest.py  test_bug_fixes.py  test_client.py  test_client_error_recovery.py  test_converters.py  test_coverage_gaps.py  test_model_cache.py  test_model_cache_integration.py  test_models.py  test_mount.py  test_observability.py  test_permissions.py  test_platform.py  test_provider.py  test_provider_coverage.py  test_provider_streaming_edge.py  test_sdk_client.py  test_session_factory.py  test_singleton.py  test_test_quality.py  test_tool_capture.py  test_tool_parsing.py  test_type_safety.py  test_user_facing_strings.py
tests/fixtures/: config_capture.py  sdk_responses.py
tests/integration/: test_forensic_regression.py  test_live_copilot.py  test_multi_model_saturation.py
